[package]
name = "prepvideo"
version = "0.2.0"
authors = ["Mike Dilger <mike@optcomp.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.18"
strum_macros = "0.18"
ron = "0.6"
regex = "1.1"
